--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,12 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
+
+    repositories{
+        flatDir{
+            dirs 'libs' //就是你放aar的目录地址
+        }
+    }
 }
 
 dependencies {
@@ -52,4 +58,10 @@ dependencies {
     compile 'com.lzy.net:okrx:0.1.2'
     compile files('libs/gson-2.6.2.jar')
     compile files('libs/BaiduLBS_Android.jar')
+    compile files('libs/MobCommons-2016.1201.1839.jar')
+    compile name: 'SMSSDK-2.1.3', ext: 'aar'
+    compile name: 'SMSSDKGUI-2.1.3', ext: 'aar'
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile files('libs/pushservice-5.6.0.30.jar')
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
